--- a/Milestone 1[Web foundation (HTML ,CSS) and github]/Module 5[Build a beautiful portfolio website]/web development portfolio/style.css
+++ b/Milestone 1[Web foundation (HTML ,CSS) and github]/Module 5[Build a beautiful portfolio website]/web development portfolio/style.css
@@ -9,6 +9,11 @@
 .text-primary{
     color:#FD6E0A ;
 }
+.header{
+    background-image: url(../portfolio-resources/images/developer.png),url(../portfolio-resources/images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: top left,bottom right;
+}
 nav ul li{
     list-style: none;
     margin-right: 50px;
@@ -61,4 +66,26 @@ nav{
 }
 .portfolio-pic{
     width: 580px;
+}
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+.section-description{
+    font-size: 18px;
+    color: #757575; 
+}
+.secondary-bg{
+    color: #FFF8F3;
+}
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
 }
